<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_id" />

    <EditText
        android:id="@+id/clientId_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_start_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_start_login"/>

    <Button
        android:id="@+id/button_stop_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>

</LinearLayout>